# crabgram

./: Cargo.toml  README.md  build.rs
migrations/: 20230918162201_photos.sql  20231005185513_split_photos.sql  20231006150844_change_photos_id.sql
qml/: main.qml
src/: build.rs  cxxqt_object.rs  interface.rs  main.rs
styles/: main.css
ui/: interface.slint
