[package]
name = "crabgram"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
grammers-client = { path = "./grammers/lib/grammers-client" }
grammers-session = { path = "./grammers/lib/grammers-session" }
grammers-tl-types = { path = "./grammers/lib/grammers-tl-types" }
log = "0.4.19"
simple_logger = "4.2.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
tokio = { version = "1.30.0", features = ["full"] }
futures = "0.3.28"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
colors-transform = "0.2.11"
slint = "1.3.2"
image = "0.24.8"

[build-dependencies]
slint-build = "1.3.0"
